Truncate display of long activity stream posts, adds read more link. Fixes #2635, props boonebgorges and paulgibbs
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4213 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1561,6 +1561,10 @@ body.activity-permalink .activity-content blockquote {
 	border: 2px solid #eee;
 }
 
+.activity-read-more {
+	margin-left: 1em;
+}
+
 .activity-list li.load-more {
 	margin: 15px 0 !important;
 	padding: 10px 15px !important;
